add text and expand close method
